test_cases/fail/f26.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i, limit
FOR (i=0, i < limit, i=i+1)
START FOR
    PRINT: i
END FOR
END SCRIPT
